--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	  <meta charset="utf-8"/>
-	  <meta name="keywords" content="万科城,维权" />
-	<title>万科简史 - RedStone红石传媒研究所 v0.1.12</title>
+	  <meta name="keywords" content="万科,维权" />
+	<title>万科简史 - v0.1.12</title>
 	<link rel="stylesheet" media="all" href="css/main.css" />
 	
 	<style>
@@ -19,15 +19,17 @@
 	</style>
 </head>
 <body>
-
-<h1>万科广告与口碑日志</h1>
+<h1>万科广告与口碑 简史</h1>
 
 
 <!-- a part begins -->
 <p class=t>频道</p>
-<a target="_blank" href="wanke_zz.html">深圳万科</a> | 
+<a href="bianmin.html">小区周边便民电话</a> | 
+<br>
+
+<a target="_blank" href="">深圳万科</a> | 
 <a target="_blank" href="">北京万科</a> | 
-<a target="_blank" href="">郑州万科</a> | 
+<a target="_blank" href="wanke_zz.html">郑州万科</a> | 
 <a target="_blank" href="">成都万科</a> | 
 <a target="_blank" href="">上海万科</a> | 
 
