--- a/bianmin.html
+++ b/bianmin.html
@@ -2,17 +2,28 @@
 <html>
 <head>
 	<meta http-equiv=Content-Type content="text/html;charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scaleble=no">
-	<title>便民 - 郑州万科城黄页 - v0.1.14</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>便民 - 郑州万科城黄页 - v0.1.15</title>
 	<meta name="keywords" content="万科,便民,黄页" />
 	<link rel="stylesheet" media="all" href="css/bianmin.css" />
-	
+<!--
+v0.1.15 添加疫苗接种信息
+
+-->
 	<style>
 .card .bingo{
 	/*
 	display:block;
 	*/
 	display:none;
+}
+.card pre{
+	font-family: ""; 
+	margin:0;
+	padding-right:3px;
+	
+	word-wrap: break-word!important; 
+	white-space: pre-wrap;
 }
 	</style>
 	
@@ -66,7 +77,7 @@ http://redstone.dawneve.cc/bianmin.html
 
 <div class=header>
 	<h1>便民服务 地址和电话<br>【信息仅供参考，可能不准确或过期】</h1>
-	<p>有需要请联系QQ: 469004330; update: 2019.12.6</p>
+	<p>有需要请联系QQ: 469004330; update: 2019.12.20</p>
 	<p>标签示例: 
 		<span class='tag'>tag1</span>
 		<span class='tag yellow'>yellow</span>
@@ -151,9 +162,29 @@ http://redstone.dawneve.cc/bianmin.html
 				<img style="height:300px;" src="images/pixel1x1.png" src-data="images/bianmin/hukou3.jpg"> <!-- 2019.6.1 -->
 			</span> 
 		</li>
+		<li>暂住证/ 居住证办理 <span class=light>更新 2019.5.31</span><span class=bingo> 暂住证可以在网上（郑州警民通 微信公众号）提交资料，等审核通过过，拿着身份证去水云苑七号楼一楼领取暂住证凭条。然后等半年后带齐资料去领取暂住证。<br>
+		//2019.5月1日起，通过“郑州警民通”申报居住证的，公安机关将为办证群众免费邮寄到家一次不跑。 </li>
+		<li>市民医保缴纳 </a> <span class=light>更新 2019.12.14</span><pre class=bingo>医保缴费截止到本月底，未缴费的居民请尽快缴纳，（今年的新生儿也需要缴纳2020年的医保费用）
+缴费金额250元，享受待遇期2020年1月-2020年12月
+缴费方式：支付宝（城市服务-社保-自然人社保费缴费）
+微信（微信搜索“河南税务”公众号，点击“微服务”-社保费缴纳；也可以搜索“郑州税务”公众号，点击下面“我的”-社保费申报）。
+税务局大厅（地址：长椿路梧桐街东南角）
+咨询电话：89816910。</pre> </li>
+		
+		
+		<li>儿童疫苗接种 <span class=light>更新 2019.12.6</span><pre class=bingo>儿童《预防接种证》办理所需资料
+一、沟赵辖区户口:。
+需携带①户口本、②出生医学证明、③出生时在出生医院接种的卡介苗和乙肝疫苗接种记录。
+二、辖区外户口
+①物业开的居住地证明、②出生医学证明、③出生时在出生医院接种的卡介苗和乙肝疫苗接种记录。
+三、接种时间:
+周一到周六的上午7:30-11:30，下午2:30-3:30
+温馨提示：注射完疫苗请观察半个小时后没有不良反应再离开。
+四、咨询电话:56172118</pre> </li>
+
+
 <!--
-		<li>收废品电话 <span class=light>更新 2019.12.6</span><span class=bingo><img src="images/pixel1x1.png" src-data=""></span> </li>
-		<li>收废品电话 <a target="_blank" href="2019/12/1.txt">[txt]</a> <span class=light>更新 2019.12.6</span> </li>
+		<li>收废品电话 <a target="_blank" href="2019/12/1.txt">[txt]</a> <span class=light>更新 2019.12.14</span><span class=bingo></span> </li>
 -->
 	</ol>
 </div>
